# solmath

./: .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION.md  LICENSE-APACHE  LICENSE-MIT  PROOFS.md  README.md  SECURITY.md  USAGE.md  VALIDATION.md
.github/workflows/: ci.yml
benchmark/: american_kbi_release_report.json  american_kbi_runtime_accuracy_report.json  american_kbi_unseen_accuracy_report.json  asian_accuracy_report.json  asian_cu_report.json  iv_vectors.json  nig_cu_report.json  nig_footprint_report.json  nig_independent_oracle_report.json  nig_release_report.json
benchmark/sbf-composite/: Cargo.toml  measure.mjs  package-lock.json  package.json
benchmark/sbf-composite/src/: lib.rs
benchmark/sbf-footprint/: Cargo.toml
benchmark/sbf-footprint/src/: lib.rs
docs/: AMERICAN_KBI.md  ARCHITECTURE.md  ASIAN_TWAP.md  NIG.md
examples/: README.md  american_kbi_batch.rs  anchor_options_pricing.md  asian_batch.rs  nig_batch.rs  options_pricing.rs  safe_token_conversion.rs  twap_options.rs  weighted_pool_swap.rs
scripts/: american_kbi_reference.py  american_quantlib_reference.py  analyze_heston_xi0.py  certify_exp_fixed.py  certify_ln_fixed.py  certify_norm_cdf.py  crosscheck_quantlib.py  fit_american_kbi_price_weights.py  fit_exp_remez.py  fit_ln_remez.py  fit_ln_remez_wide.py  fit_ln_remez_wide_hp.py  generate_adversarial_vectors.py  generate_american_kbi_data.py  generate_asian_quantlib_vectors.py  generate_asian_vectors.py  generate_barrier_vectors.py  generate_bvn_phi2_references.py  generate_exp_coeffs.py  generate_expm1_lut.py  generate_ln2_lut.py  generate_ln_lut.py  generate_missing_vectors.py  generate_nig_k1_coeffs.py  generate_norm_cdf_coeffs.py  generate_production_vectors.py  generate_references.py  lipschitz_certificate.py  measure_downstream_gaps.rs  measure_exp_affected.rs  measure_expm1_vectors.rs  measure_heston_xi0.rs  measure_ln_1p_vectors.rs  measure_sbf_footprint.sh  measure_unary_vectors.rs  nig_reference.py  phi_7piece.py  phi_coefficients.py  phi_coefficients_v2.py  phi_coefficients_v3.py  (+16 more)
src/: american_kbi.rs  american_kbi_data.rs  arithmetic.rs  asian.rs  barrier.rs  bs.rs  bvn_cdf.rs  checked.rs  complex.rs  constants.rs  double_word.rs  encoding.rs  error.rs  exp_coeffs.rs  expm1_lut.rs  heston.rs  hp.rs  i64_cf.rs  i64_math.rs  iv.rs  lib.rs  ln2_lut.rs  ln_lut.rs  lut_budget.rs  mul_div.rs  nig.rs  norm_cdf_coeffs.rs  normal.rs  overflow.rs  phi2table.rs  pool.rs  rainbow.rs  sabr.rs  transcendental.rs  trig.rs  utils.rs
test_data/: heston_reference_tests.rs  sabr_reference_tests.rs
tests/: asian_quantlib_reference.rs  asian_reference.rs  checked_layer.rs  critical_invariants.rs  rainbow_reference.rs  sabr_quantlib_reference.rs
