[package]
name = "solmath"
version = "0.1.3"
edition = "2021"
description = "Fixed-point financial math for Solana. Black-Scholes, Greeks, IV, NIG pricing, pool math — pure integer arithmetic, no_std, zero dependencies."
license = "MIT OR Apache-2.0"
repository = "https://github.com/DJBarker87/solmath"
keywords = ["solana", "fixed-point", "black-scholes", "defi", "math"]
categories = ["mathematics", "no-std::no-alloc"]
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "SECURITY.md",
    "USAGE.md",
    "PROOFS.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "docs/**",
    "scripts/**",
    "benchmark/iv_vectors.json",
    "test_data/heston_reference_tests.rs",
    "test_data/sabr_reference_tests.rs",
    "tests/reference/mul_div_vectors.json",
    "src/**",
]

[features]
default = ["transcendental", "complex"]
full = ["transcendental", "complex", "bs", "iv", "barrier", "nig", "heston", "sabr", "pool", "bivariate"]
transcendental = []
bivariate = ["transcendental"]
table-gen = ["bivariate"]
complex = ["transcendental"]
bs = ["transcendental"]
iv = ["bs"]
barrier = ["transcendental"]
nig = ["transcendental", "complex"]
heston = ["bs", "complex"]
sabr = ["transcendental"]
pool = ["transcendental"]
pade-iv = ["iv"]
idl-build = []

[dependencies]
# Zero dependencies — pure Rust, no_std

[dev-dependencies]
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
