[package]
name = "solmath"
version = "0.1.5"
edition = "2021"
rust-version = "1.79"
description = "Fixed-point financial math for Solana. Black-Scholes, Greeks, IV, NIG pricing, pool math — pure integer arithmetic, no_std, zero dependencies."
license = "MIT OR Apache-2.0"
repository = "https://github.com/DJBarker87/solmath"
keywords = ["solana", "fixed-point", "black-scholes", "defi", "math"]
categories = ["mathematics", "no-std::no-alloc"]
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "INTEGRATION.md",
    "SECURITY.md",
    "USAGE.md",
    "PROOFS.md",
    "VALIDATION.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "docs/**",
    "examples/**",
    "benchmark/iv_vectors.json",
    "test_data/heston_reference_tests.rs",
    "test_data/sabr_reference_tests.rs",
    "src/**",
]

[features]
default = ["transcendental", "complex"]
full = ["transcendental", "complex", "bs", "iv", "barrier", "nig", "heston", "sabr", "pool", "bivariate"]
transcendental = []
bivariate = ["transcendental"]
table-gen = ["bivariate"]
complex = ["transcendental"]
bs = ["transcendental"]
iv = ["bs"]
barrier = ["transcendental"]
nig = ["transcendental", "complex"]
heston = ["bs", "complex"]
sabr = ["transcendental"]
pool = ["transcendental"]
pade-iv = ["iv"]
idl-build = []

[dependencies]
# Zero dependencies — pure Rust, no_std

[[example]]
name = "options_pricing"
path = "examples/options_pricing.rs"
required-features = ["transcendental"]

[[example]]
name = "weighted_pool_swap"
path = "examples/weighted_pool_swap.rs"
required-features = ["pool"]

[[example]]
name = "safe_token_conversion"
path = "examples/safe_token_conversion.rs"
required-features = ["pool"]
