[package]
name = "solmath-sbf-composite"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "solmath_sbf_composite"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.32.1"
indexmap = "=2.13.0"
solana-msg = "=2.2.1"
solmath = { path = "../..", default-features = false, features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
