[package]
name = "solmath-sbf-footprint"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "solmath_sbf_footprint"

[features]
default = []
exp = []
expm1 = []
ln1p = []
both = []
legacy-expm1 = []
kbi = ["solmath/american-kbi"]
nig = ["solmath/nig"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.32.1"
indexmap = "=2.13.0"
solmath = { path = "../..", default-features = false, features = ["transcendental"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
